--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,5 @@
       "parser": "@typescript-eslint/parser"
     }
   ],
-  "rules":{
-    '@typescript-eslint/no-empty-interface': [
-    'error',
-    { allowSingleExtends: true },
-  ]
-}
+  "rules":{}
 }
